ipc/ipdl/test/ipdl/ok/Pmedia.ipdl
[ChildProc=any]
sync protocol Pmedia {
child:
    async __delete__();

};
