ipc/ipdl/test/ipdl/error/PBadNestedManagee.ipdl
//error: protocol `PBadNestedManagee' requires more powerful send semantics than its manager `PBadNestedManager' provides

include protocol PBadNestedManager;

[NestedUpTo=inside_sync, ChildProc=any]
async protocol PBadNestedManagee {
    manager PBadNestedManager;
child:
    async __delete__();
};
